--- a/inventory.ui
+++ b/inventory.ui
@@ -6,8 +6,8 @@
    <rect>
     <x>0</x>
     <y>0</y>
-    <width>640</width>
-    <height>480</height>
+    <width>691</width>
+    <height>477</height>
    </rect>
   </property>
   <property name="windowTitle">
@@ -21,46 +21,26 @@
    <layout class="QGridLayout" name="gridLayout_2">
     <item row="0" column="0">
      <layout class="QGridLayout" name="gridLayout">
-      <item row="0" column="3">
-       <widget class="QComboBox" name="comboBox">
+      <item row="2" column="2" colspan="2">
+       <widget class="QListView" name="listView"/>
+      </item>
+      <item row="0" column="1" colspan="2" alignment="Qt::AlignHCenter">
+       <widget class="QPushButton" name="pushButton_2">
         <property name="sizePolicy">
-         <sizepolicy hsizetype="Preferred" vsizetype="Fixed">
+         <sizepolicy hsizetype="Fixed" vsizetype="Fixed">
           <horstretch>0</horstretch>
           <verstretch>0</verstretch>
          </sizepolicy>
         </property>
-        <property name="maximumSize">
-         <size>
-          <width>300</width>
-          <height>16777215</height>
-         </size>
-        </property>
-        <item>
-         <property name="text">
-          <string>ARCUser</string>
-         </property>
-        </item>
-        <item>
-         <property name="text">
-          <string>Settings</string>
-         </property>
-        </item>
-       </widget>
-      </item>
-      <item row="2" column="2" colspan="2">
-       <widget class="QListView" name="listView"/>
-      </item>
-      <item row="1" column="1" colspan="2" alignment="Qt::AlignHCenter">
-       <widget class="QLabel" name="label_2">
         <property name="text">
-         <string>&lt;html&gt;&lt;head/&gt;&lt;body&gt;&lt;p&gt;&lt;span style=&quot; font-weight:600;&quot;&gt;Inventory&lt;/span&gt;&lt;/p&gt;&lt;/body&gt;&lt;/html&gt;</string>
+         <string>Cart: #</string>
         </property>
        </widget>
       </item>
       <item row="2" column="0" colspan="2">
        <widget class="QTreeView" name="treeView"/>
       </item>
-      <item row="0" column="0">
+      <item row="0" column="0" alignment="Qt::AlignLeft|Qt::AlignTop">
        <widget class="QLabel" name="label_5">
         <property name="sizePolicy">
          <sizepolicy hsizetype="Fixed" vsizetype="Fixed">
@@ -85,16 +65,25 @@
         </property>
        </widget>
       </item>
-      <item row="0" column="1" colspan="2" alignment="Qt::AlignHCenter">
-       <widget class="QPushButton" name="pushButton_2">
-        <property name="sizePolicy">
-         <sizepolicy hsizetype="Fixed" vsizetype="Fixed">
-          <horstretch>0</horstretch>
-          <verstretch>0</verstretch>
-         </sizepolicy>
+      <item row="0" column="3" alignment="Qt::AlignRight">
+       <widget class="QComboBox" name="comboBox">
+        <property name="maximumSize">
+         <size>
+          <width>300</width>
+          <height>16777215</height>
+         </size>
         </property>
+        <item>
+         <property name="text">
+          <string>ARCUser0</string>
+         </property>
+        </item>
+       </widget>
+      </item>
+      <item row="1" column="0" colspan="4">
+       <widget class="QLabel" name="label_2">
         <property name="text">
-         <string>Cart: #</string>
+         <string>&lt;html&gt;&lt;head/&gt;&lt;body&gt;&lt;p align=&quot;center&quot;&gt;&lt;span style=&quot; font-weight:600;&quot;&gt;Inventory&lt;/span&gt;&lt;/p&gt;&lt;/body&gt;&lt;/html&gt;</string>
         </property>
        </widget>
       </item>
@@ -102,17 +91,6 @@
     </item>
    </layout>
   </widget>
-  <widget class="QMenuBar" name="menubar">
-   <property name="geometry">
-    <rect>
-     <x>0</x>
-     <y>0</y>
-     <width>640</width>
-     <height>32</height>
-    </rect>
-   </property>
-  </widget>
-  <widget class="QStatusBar" name="statusbar"/>
  </widget>
  <resources/>
  <connections/>
