--- a/finger.ui
+++ b/finger.ui
@@ -1,7 +1,7 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <ui version="4.0">
- <class>LoginWindow</class>
- <widget class="QDialog" name="LoginWindow">
+ <class>loginWindow</class>
+ <widget class="QDialog" name="loginWindow">
   <property name="enabled">
    <bool>true</bool>
   </property>
