--- a/inventory.ui
+++ b/inventory.ui
@@ -25,7 +25,7 @@
        <widget class="QListView" name="listView"/>
       </item>
       <item row="0" column="1" colspan="2" alignment="Qt::AlignHCenter">
-       <widget class="QPushButton" name="pushButton_2">
+       <widget class="QPushButton" name="cartButton">
         <property name="sizePolicy">
          <sizepolicy hsizetype="Fixed" vsizetype="Fixed">
           <horstretch>0</horstretch>
