--- a/userprofile.ui
+++ b/userprofile.ui
@@ -25,7 +25,7 @@ QWidget {background-color: rgb(255, 255, 255)}
       <number>12</number>
      </property>
      <item row="3" column="1" alignment="Qt::AlignTop">
-      <widget class="QPushButton" name="pushButton_4">
+      <widget class="QPushButton" name="inventoryButton">
        <property name="text">
         <string>Inventory</string>
        </property>
@@ -71,7 +71,7 @@ QWidget {background-color: rgb(255, 255, 255)}
       </widget>
      </item>
      <item row="4" column="1" alignment="Qt::AlignTop">
-      <widget class="QPushButton" name="pushButton_2">
+      <widget class="QPushButton" name="viewItemsButton">
        <property name="text">
         <string>View My Items</string>
        </property>
@@ -103,7 +103,7 @@ QWidget {background-color: rgb(255, 255, 255)}
       </widget>
      </item>
      <item row="7" column="1" alignment="Qt::AlignTop">
-      <widget class="QPushButton" name="pushButton_3">
+      <widget class="QPushButton" name="resetPinButton">
        <property name="text">
         <string>Reset PIN</string>
        </property>
@@ -148,14 +148,14 @@ QWidget {background-color: rgb(255, 255, 255)}
       </spacer>
      </item>
      <item row="6" column="1" alignment="Qt::AlignTop">
-      <widget class="QPushButton" name="pushButton">
+      <widget class="QPushButton" name="editDetailsButton">
        <property name="text">
         <string>Edit Details</string>
        </property>
       </widget>
      </item>
      <item row="5" column="1" alignment="Qt::AlignTop">
-      <widget class="QPushButton" name="pushButton_5">
+      <widget class="QPushButton" name="requestButton">
        <property name="text">
         <string>Purchase Request</string>
        </property>
@@ -166,7 +166,7 @@ QWidget {background-color: rgb(255, 255, 255)}
       </widget>
      </item>
      <item row="7" column="2" alignment="Qt::AlignRight">
-      <widget class="QPushButton" name="pushButton_6">
+      <widget class="QPushButton" name="lockButton">
        <property name="text">
         <string>🔒 Lock</string>
        </property>
