--- a/userprofile.ui
+++ b/userprofile.ui
@@ -19,42 +19,46 @@ QWidget {background-color: rgb(255, 255, 255)}
 </string>
   </property>
   <layout class="QGridLayout" name="gridLayout_2">
+   <item row="1" column="0">
+    <spacer name="verticalSpacer">
+     <property name="orientation">
+      <enum>Qt::Vertical</enum>
+     </property>
+     <property name="sizeHint" stdset="0">
+      <size>
+       <width>20</width>
+       <height>40</height>
+      </size>
+     </property>
+    </spacer>
+   </item>
    <item row="0" column="0">
     <layout class="QGridLayout" name="gridLayout">
      <property name="verticalSpacing">
       <number>12</number>
      </property>
-     <item row="3" column="1" alignment="Qt::AlignTop">
-      <widget class="QPushButton" name="inventoryButton">
+     <item row="1" column="0" alignment="Qt::AlignLeft|Qt::AlignTop">
+      <widget class="QPushButton" name="pushButton_2">
+       <property name="font">
+        <font>
+         <pointsize>12</pointsize>
+         <weight>50</weight>
+         <bold>false</bold>
+        </font>
+       </property>
        <property name="text">
-        <string>Inventory</string>
+        <string>Back</string>
        </property>
-      </widget>
-     </item>
-     <item row="0" column="2" alignment="Qt::AlignRight|Qt::AlignVCenter">
-      <widget class="QComboBox" name="comboBox">
-       <property name="sizePolicy">
-        <sizepolicy hsizetype="Fixed" vsizetype="Fixed">
-         <horstretch>0</horstretch>
-         <verstretch>0</verstretch>
-        </sizepolicy>
+       <property name="icon">
+        <iconset>
+         <normaloff>ChevronLeft-128.png</normaloff>ChevronLeft-128.png</iconset>
        </property>
-       <property name="maximumSize">
+       <property name="iconSize">
         <size>
-         <width>300</width>
-         <height>16777215</height>
+         <width>16</width>
+         <height>16</height>
         </size>
        </property>
-       <item>
-        <property name="text">
-         <string>ARCUser</string>
-        </property>
-       </item>
-       <item>
-        <property name="text">
-         <string>Settings</string>
-        </property>
-       </item>
       </widget>
      </item>
      <item row="0" column="1" alignment="Qt::AlignHCenter|Qt::AlignVCenter">
@@ -67,45 +71,6 @@ QWidget {background-color: rgb(255, 255, 255)}
        </property>
        <property name="text">
         <string>&lt;html&gt;&lt;head/&gt;&lt;body&gt;&lt;p align=&quot;center&quot;&gt;&lt;span style=&quot; font-size:18pt; font-weight:600;&quot;&gt;Welcome, ARCUser&lt;/span&gt;&lt;/p&gt;&lt;/body&gt;&lt;/html&gt;</string>
-       </property>
-      </widget>
-     </item>
-     <item row="4" column="1" alignment="Qt::AlignTop">
-      <widget class="QPushButton" name="viewItemsButton">
-       <property name="text">
-        <string>View My Items</string>
-       </property>
-      </widget>
-     </item>
-     <item row="0" column="0" alignment="Qt::AlignLeft|Qt::AlignTop">
-      <widget class="QLabel" name="label_3">
-       <property name="sizePolicy">
-        <sizepolicy hsizetype="Fixed" vsizetype="Fixed">
-         <horstretch>0</horstretch>
-         <verstretch>0</verstretch>
-        </sizepolicy>
-       </property>
-       <property name="maximumSize">
-        <size>
-         <width>134</width>
-         <height>115</height>
-        </size>
-       </property>
-       <property name="text">
-        <string/>
-       </property>
-       <property name="pixmap">
-        <pixmap>13015184_719298964879056_6631447530178360880_n.png</pixmap>
-       </property>
-       <property name="scaledContents">
-        <bool>true</bool>
-       </property>
-      </widget>
-     </item>
-     <item row="7" column="1" alignment="Qt::AlignTop">
-      <widget class="QPushButton" name="resetPinButton">
-       <property name="text">
-        <string>Reset PIN</string>
        </property>
       </widget>
      </item>
@@ -134,6 +99,38 @@ QWidget {background-color: rgb(255, 255, 255)}
        </property>
       </widget>
      </item>
+     <item row="0" column="0" alignment="Qt::AlignLeft|Qt::AlignTop">
+      <widget class="QLabel" name="label_3">
+       <property name="sizePolicy">
+        <sizepolicy hsizetype="Fixed" vsizetype="Fixed">
+         <horstretch>0</horstretch>
+         <verstretch>0</verstretch>
+        </sizepolicy>
+       </property>
+       <property name="maximumSize">
+        <size>
+         <width>175</width>
+         <height>150</height>
+        </size>
+       </property>
+       <property name="text">
+        <string/>
+       </property>
+       <property name="pixmap">
+        <pixmap>13015184_719298964879056_6631447530178360880_n.png</pixmap>
+       </property>
+       <property name="scaledContents">
+        <bool>true</bool>
+       </property>
+      </widget>
+     </item>
+     <item row="3" column="1" alignment="Qt::AlignTop">
+      <widget class="QPushButton" name="inventoryButton">
+       <property name="text">
+        <string>Inventory</string>
+       </property>
+      </widget>
+     </item>
      <item row="2" column="1">
       <spacer name="verticalSpacer_2">
        <property name="orientation">
@@ -147,10 +144,19 @@ QWidget {background-color: rgb(255, 255, 255)}
        </property>
       </spacer>
      </item>
-     <item row="6" column="1" alignment="Qt::AlignTop">
-      <widget class="QPushButton" name="editDetailsButton">
+     <item row="0" column="2" alignment="Qt::AlignRight|Qt::AlignTop">
+      <widget class="QPushButton" name="pushButton">
        <property name="text">
-        <string>Edit Details</string>
+        <string>Logout</string>
+       </property>
+       <property name="icon">
+        <iconset theme="system-shutdown"/>
+       </property>
+       <property name="iconSize">
+        <size>
+         <width>16</width>
+         <height>16</height>
+        </size>
        </property>
       </widget>
      </item>
@@ -165,6 +171,27 @@ QWidget {background-color: rgb(255, 255, 255)}
        </property>
       </widget>
      </item>
+     <item row="7" column="1" alignment="Qt::AlignTop">
+      <widget class="QPushButton" name="resetPinButton">
+       <property name="text">
+        <string>Reset PIN</string>
+       </property>
+      </widget>
+     </item>
+     <item row="6" column="1" alignment="Qt::AlignTop">
+      <widget class="QPushButton" name="editDetailsButton">
+       <property name="text">
+        <string>Edit Details</string>
+       </property>
+      </widget>
+     </item>
+     <item row="4" column="1" alignment="Qt::AlignTop">
+      <widget class="QPushButton" name="viewItemsButton">
+       <property name="text">
+        <string>View My Items</string>
+       </property>
+      </widget>
+     </item>
      <item row="7" column="2" alignment="Qt::AlignRight">
       <widget class="QPushButton" name="lockButton">
        <property name="text">
@@ -173,19 +200,6 @@ QWidget {background-color: rgb(255, 255, 255)}
       </widget>
      </item>
     </layout>
-   </item>
-   <item row="1" column="0">
-    <spacer name="verticalSpacer">
-     <property name="orientation">
-      <enum>Qt::Vertical</enum>
-     </property>
-     <property name="sizeHint" stdset="0">
-      <size>
-       <width>20</width>
-       <height>40</height>
-      </size>
-     </property>
-    </spacer>
    </item>
   </layout>
  </widget>
