--- a/userprofile.ui
+++ b/userprofile.ui
@@ -6,93 +6,116 @@
    <rect>
     <x>0</x>
     <y>0</y>
-    <width>1082</width>
-    <height>775</height>
+    <width>972</width>
+    <height>733</height>
    </rect>
   </property>
   <property name="windowTitle">
    <string>Dialog</string>
   </property>
   <property name="styleSheet">
-   <string notr="true">QPushButton {padding: 10px}
+   <string notr="true">QPushButton {padding: 20px}
 QWidget {background-color: rgb(255, 255, 255)}
 </string>
   </property>
   <layout class="QGridLayout" name="gridLayout_2">
-   <item row="1" column="0">
+   <item row="0" column="0">
     <layout class="QGridLayout" name="gridLayout">
-     <property name="verticalSpacing">
-      <number>12</number>
-     </property>
-     <item row="1" column="0" alignment="Qt::AlignLeft|Qt::AlignTop">
-      <widget class="QPushButton" name="pushButton_2">
-       <property name="font">
-        <font>
-         <pointsize>12</pointsize>
-         <weight>50</weight>
-         <bold>false</bold>
-        </font>
-       </property>
+     <item row="4" column="1">
+      <widget class="QPushButton" name="inventoryButton">
        <property name="text">
-        <string>Back</string>
+        <string>Inventory</string>
        </property>
-       <property name="icon">
-        <iconset>
-         <normaloff>ChevronLeft-128.png</normaloff>ChevronLeft-128.png</iconset>
+      </widget>
+     </item>
+     <item row="7" column="1">
+      <widget class="QPushButton" name="editDetailsButton">
+       <property name="text">
+        <string>Edit Details</string>
        </property>
-       <property name="iconSize">
+      </widget>
+     </item>
+     <item row="5" column="1">
+      <widget class="QPushButton" name="viewItemsButton">
+       <property name="text">
+        <string>View My Items</string>
+       </property>
+      </widget>
+     </item>
+     <item row="8" column="1">
+      <widget class="QPushButton" name="resetPinButton">
+       <property name="text">
+        <string>Reset PIN</string>
+       </property>
+      </widget>
+     </item>
+     <item row="1" column="1">
+      <spacer name="verticalSpacer_2">
+       <property name="orientation">
+        <enum>Qt::Vertical</enum>
+       </property>
+       <property name="sizeHint" stdset="0">
         <size>
-         <width>16</width>
-         <height>16</height>
+         <width>20</width>
+         <height>40</height>
         </size>
        </property>
+      </spacer>
+     </item>
+     <item row="0" column="2" alignment="Qt::AlignRight|Qt::AlignTop">
+      <widget class="QWidget" name="" native="true">
+       <layout class="QHBoxLayout" name="horizontalLayout">
+        <item>
+         <widget class="QLabel" name="label_2">
+          <property name="minimumSize">
+           <size>
+            <width>0</width>
+            <height>40</height>
+           </size>
+          </property>
+          <property name="maximumSize">
+           <size>
+            <width>50</width>
+            <height>50</height>
+           </size>
+          </property>
+          <property name="text">
+           <string/>
+          </property>
+          <property name="pixmap">
+           <pixmap>index.png</pixmap>
+          </property>
+          <property name="scaledContents">
+           <bool>true</bool>
+          </property>
+         </widget>
+        </item>
+        <item>
+         <widget class="QComboBox" name="comboBox">
+          <property name="minimumSize">
+           <size>
+            <width>200</width>
+            <height>40</height>
+           </size>
+          </property>
+          <property name="maximumSize">
+           <size>
+            <width>300</width>
+            <height>16777215</height>
+           </size>
+          </property>
+         </widget>
+        </item>
+       </layout>
       </widget>
      </item>
-     <item row="0" column="1" alignment="Qt::AlignHCenter|Qt::AlignVCenter">
-      <widget class="QLabel" name="label">
-       <property name="sizePolicy">
-        <sizepolicy hsizetype="Preferred" vsizetype="Fixed">
-         <horstretch>0</horstretch>
-         <verstretch>0</verstretch>
-        </sizepolicy>
-       </property>
-       <property name="text">
-        <string>&lt;html&gt;&lt;head/&gt;&lt;body&gt;&lt;p align=&quot;center&quot;&gt;&lt;span style=&quot; font-size:18pt; font-weight:600;&quot;&gt;Welcome, ARCUser&lt;/span&gt;&lt;/p&gt;&lt;/body&gt;&lt;/html&gt;</string>
-       </property>
-      </widget>
-     </item>
-     <item row="1" column="1" alignment="Qt::AlignHCenter|Qt::AlignTop">
-      <widget class="QLabel" name="label_2">
-       <property name="sizePolicy">
-        <sizepolicy hsizetype="Fixed" vsizetype="Fixed">
-         <horstretch>0</horstretch>
-         <verstretch>0</verstretch>
-        </sizepolicy>
-       </property>
-       <property name="maximumSize">
-        <size>
-         <width>120</width>
-         <height>120</height>
-        </size>
-       </property>
-       <property name="text">
-        <string/>
-       </property>
-       <property name="pixmap">
-        <pixmap>index.png</pixmap>
-       </property>
-       <property name="scaledContents">
-        <bool>true</bool>
-       </property>
-      </widget>
-     </item>
-     <item row="0" column="0" alignment="Qt::AlignLeft|Qt::AlignTop">
+     <item row="0" column="1" alignment="Qt::AlignHCenter|Qt::AlignTop">
       <widget class="QLabel" name="label_3">
-       <property name="sizePolicy">
-        <sizepolicy hsizetype="Fixed" vsizetype="Fixed">
-         <horstretch>0</horstretch>
-         <verstretch>0</verstretch>
-        </sizepolicy>
+       <property name="minimumSize">
+        <size>
+         <width>0</width>
+         <height>0</height>
+        </size>
        </property>
        <property name="maximumSize">
         <size>
@@ -111,15 +134,56 @@ QWidget {background-color: rgb(255, 255, 255)}
        </property>
       </widget>
      </item>
-     <item row="3" column="1" alignment="Qt::AlignTop">
-      <widget class="QPushButton" name="inventoryButton">
+     <item row="0" column="0" alignment="Qt::AlignLeft|Qt::AlignTop">
+      <widget class="QPushButton" name="pushButton_2">
+       <property name="maximumSize">
+        <size>
+         <width>50</width>
+         <height>16777215</height>
+        </size>
+       </property>
+       <property name="font">
+        <font>
+         <pointsize>12</pointsize>
+         <weight>50</weight>
+         <bold>false</bold>
+        </font>
+       </property>
        <property name="text">
-        <string>Inventory</string>
+        <string/>
+       </property>
+       <property name="icon">
+        <iconset>
+         <normaloff>ChevronLeft-128.png</normaloff>ChevronLeft-128.png</iconset>
        </property>
       </widget>
      </item>
-     <item row="2" column="1">
-      <spacer name="verticalSpacer_2">
+     <item row="2" column="1" alignment="Qt::AlignHCenter">
+      <widget class="QLabel" name="label">
+       <property name="sizePolicy">
+        <sizepolicy hsizetype="Preferred" vsizetype="Fixed">
+         <horstretch>0</horstretch>
+         <verstretch>0</verstretch>
+        </sizepolicy>
+       </property>
+       <property name="text">
+        <string>&lt;html&gt;&lt;head/&gt;&lt;body&gt;&lt;p align=&quot;center&quot;&gt;&lt;span style=&quot; font-size:18pt; font-weight:600;&quot;&gt;Welcome, ARCUser&lt;/span&gt;&lt;/p&gt;&lt;/body&gt;&lt;/html&gt;</string>
+       </property>
+      </widget>
+     </item>
+     <item row="6" column="1">
+      <widget class="QPushButton" name="requestButton">
+       <property name="text">
+        <string>Purchase Request</string>
+       </property>
+       <property name="icon">
+        <iconset theme="save">
+         <normaloff>.</normaloff>.</iconset>
+       </property>
+      </widget>
+     </item>
+     <item row="9" column="1">
+      <spacer name="verticalSpacer">
        <property name="orientation">
         <enum>Qt::Vertical</enum>
        </property>
@@ -131,76 +195,20 @@ QWidget {background-color: rgb(255, 255, 255)}
        </property>
       </spacer>
      </item>
-     <item row="0" column="2" alignment="Qt::AlignRight|Qt::AlignTop">
-      <widget class="QPushButton" name="pushButton">
-       <property name="text">
-        <string>Logout</string>
+     <item row="3" column="1">
+      <spacer name="verticalSpacer_3">
+       <property name="orientation">
+        <enum>Qt::Vertical</enum>
        </property>
-       <property name="icon">
-        <iconset theme="system-shutdown">
-         <normaloff>.</normaloff>.</iconset>
-       </property>
-       <property name="iconSize">
+       <property name="sizeHint" stdset="0">
         <size>
-         <width>16</width>
-         <height>16</height>
+         <width>20</width>
+         <height>40</height>
         </size>
        </property>
-      </widget>
-     </item>
-     <item row="5" column="1" alignment="Qt::AlignTop">
-      <widget class="QPushButton" name="requestButton">
-       <property name="text">
-        <string>Purchase Request</string>
-       </property>
-       <property name="icon">
-        <iconset theme="save">
-         <normaloff>.</normaloff>.</iconset>
-       </property>
-      </widget>
-     </item>
-     <item row="7" column="1" alignment="Qt::AlignTop">
-      <widget class="QPushButton" name="resetPinButton">
-       <property name="text">
-        <string>Reset PIN</string>
-       </property>
-      </widget>
-     </item>
-     <item row="6" column="1" alignment="Qt::AlignTop">
-      <widget class="QPushButton" name="editDetailsButton">
-       <property name="text">
-        <string>Edit Details</string>
-       </property>
-      </widget>
-     </item>
-     <item row="4" column="1" alignment="Qt::AlignTop">
-      <widget class="QPushButton" name="viewItemsButton">
-       <property name="text">
-        <string>View My Items</string>
-       </property>
-      </widget>
+      </spacer>
      </item>
     </layout>
-   </item>
-   <item row="3" column="0" alignment="Qt::AlignRight|Qt::AlignBottom">
-    <widget class="QPushButton" name="lockButton">
-     <property name="text">
-      <string>🔒 Lock</string>
-     </property>
-    </widget>
-   </item>
-   <item row="2" column="0">
-    <spacer name="verticalSpacer">
-     <property name="orientation">
-      <enum>Qt::Vertical</enum>
-     </property>
-     <property name="sizeHint" stdset="0">
-      <size>
-       <width>20</width>
-       <height>40</height>
-      </size>
-     </property>
-    </spacer>
    </item>
   </layout>
  </widget>
