--- a/inventory.ui
+++ b/inventory.ui
@@ -22,14 +22,20 @@ QWidget {background-color: white}
    <layout class="QGridLayout" name="gridLayout_2">
     <item row="0" column="0">
      <layout class="QGridLayout" name="gridLayout">
-      <item row="0" column="0">
+      <item row="0" column="0" alignment="Qt::AlignLeft|Qt::AlignTop">
        <widget class="QPushButton" name="pushButton_2">
+        <property name="minimumSize">
+         <size>
+          <width>50</width>
+          <height>50</height>
+         </size>
+        </property>
         <property name="styleSheet">
          <string notr="true">QPushButton {padding: 10px}
 </string>
         </property>
         <property name="text">
-         <string>Back</string>
+         <string/>
         </property>
         <property name="icon">
          <iconset>
@@ -62,7 +68,7 @@ QWidget {background-color: white}
         </property>
        </widget>
       </item>
-      <item row="0" column="3">
+      <item row="0" column="3" alignment="Qt::AlignRight|Qt::AlignTop">
        <widget class="QPushButton" name="pushButton">
         <property name="text">
          <string>Logout</string>
